--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,30 +3,6 @@
 // Import a Google Font
 @import url('https://fonts.googleapis.com/css?family=Lora|Source+Sans+Pro:400,400i,500,500i');
 
-// Set your brand colors
-$purple: #8A4D76;
-$pink: #FA7C91;
-$brown: #757763;
-$beige-light: #D0D1CD;
-$beige-lighter: #EFF0EB;
-$white: #ffffff;
-$blue: #46a5bf;
-
-// Update Bulma's global variables
-$grey-dark: $brown;
-$grey-light: $beige-light;
-$primary: $blue;
-$link: $blue;
-$widescreen-enabled: false;
-$fullhd-enabled: false;
-$family-primary: 'Source Sans Pro', serif;
-$family-secondary: 'Lora', serif;
-
-// Update some of Bulma's component variables
-$body-background-color: $white;
-$control-border-width: 2px;
-$input-shadow: none;
-
-$footer-background-color: #f9f9f9;
+@import './variables';
 
 @import "~bulma/bulma";
